--- a/package.json
+++ b/package.json
@@ -11,58 +11,35 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "nuxt": "3.15.4",
-    "vue": "3.5.21",
-    "vue-router": "4.5.1",
     "@csstools/postcss-global-data": "^3.0.0",
     "@formkit/auto-animate": "^0.8.2",
-    "@hebilicious/vue-query-nuxt": "^0.3.0",
-    "@intlify/core-base": "^9.2",
-    "@intlify/message-compiler": "^9.2",
-    "@nuxtjs/i18n": "^8",
-    "@pinia/nuxt": "0.9.0",
-    "@tinymce/tinymce-vue": "6.2.0",
-    "@vee-validate/zod": "4.15.0",
+    "@storybook/vue3-vite": "^9.1.10",
     "@vueuse/components": "^13.6.0",
     "@vueuse/core": "10.4.1",
     "@vueuse/nuxt": "10.11.0",
     "algoliasearch": "^5.20.3",
-    "axios": "^0.25.0",
-    "cloudinary": "^2.7.0",
-    "js-cookie": "^3.0.5",
-    "js-sha256": "^0.10.1",
-    "json-editor-vue": "^0.15.2",
-    "less": "^3.13.1",
-    "lodash": "^4.17.21",
-    "pinia": "2.3.1",
-    "postcss-preset-env": "^9.2.0",
-    "qs": "^6.14.0",
+    "nuxt": "3.15.4",
     "radix-vue": "^1.8.3",
-    "select2": "^3.5.1",
-    "slugify": "^1.6.6",
-    "uuid": "^8.3.2",
-    "vue-i18n": "^9.2",
+    "vue": "3.5.21",
     "vue-instantsearch": "^4.20.4",
-    "vuedraggable": "^4.1.0",
-    "vuex": "4.0.2",
-    "yup": "^1.6.1",
-    "zod": "3.24.2"    
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.1",
-    "@nuxtjs/storybook": "latest",
-    "@storybook/addon-docs": "9.1.10",
-    "storybook": "9.1.10",
-     "@ant-design-vue/nuxt": "^1.4.2",
     "@nuxt/devtools": "^1.3.9",
+    "@nuxtjs/storybook": "latest",
+    "@storybook-vue/nuxt": "0.2.6",
+    "@storybook/addon-docs": "9.1.10",
+    "@storybook/addon-links": "9.1.10",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "9.1.10",
+    "@storybook/vue3": "9.1.10",
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "22.15.3",
-    "@vee-validate/nuxt": "4.15.0",
     "@vitejs/plugin-vue": "5.2.3",
     "autoprefixer": "^10.4.2",
     "dotenv-cli": "^10.0.0",
     "postcss": "^8.4.5",
+    "storybook": "9.1.10",
     "v-gsap-nuxt": "1.4.2",
     "vite": "6.3.5",
     "vue3-carousel-nuxt": "^1.1.2"
